Bug 461964 - When you go inside some directory, Filelight occasionally shows a portion of a pie chart attributed to a user homedir
Summary: When you go inside some directory, Filelight occasionally shows a portion of ...
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.11.80
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-17 21:58 UTC by Alex Kh
Modified: 2022-12-01 21:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.12.0
Sentry Crash Report:


Attachments
example (120.57 KB, image/png)
2022-11-17 21:58 UTC, Alex Kh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Kh 2022-11-17 21:58:01 UTC
I'm running KDE Neon unstable with all the latest updates in a virtual machine, but I've seen the same behavior in couple of other distros, like Ubuntu 22.10, Manjaro, Pop OS - you name it. 

STEPS TO REPRODUCE
1. Be logged as a user to whatever desktop environment, not as root. Tested with XFCE, Gnome and KDE. 
2. Open Filelight and scan a root folder
3. Go into some directory, 2 or more levels behind /, like /usr/share

OBSERVED RESULT
In a piechart you'll see a portion, attributed to the current user home directory. Even the tooltip says the same.

EXPECTED RESULT
No extra piechart portions, which have nothing to do with a directory, where the user is, should be displayed. 

SOFTWARE/OS VERSIONS
Linux Neon Unstable 22.04 x86_64 kernel 5.15.0-53
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
Comment 1 Alex Kh 2022-11-17 21:58:35 UTC
Created attachment 153846 [details]
example
Comment 2 Alex Kh 2022-11-17 22:01:27 UTC
Tested Filelight versions 23.03.70, 22.08.3 - the bug is still there, probably even in older versions.
Comment 3 Bug Janitor Service 2022-11-26 11:01:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/filelight/-/merge_requests/63
Comment 4 Ismael Asensio 2022-12-01 21:36:05 UTC
Git commit 99ce2eaaaa667a293e8547b7f64811350074b223 by Ismael Asensio.
Committed on 01/12/2022 at 21:13.
Pushed by iasensio into branch 'master'.

Fix the path shown for unrepresented files

To represent the bunch of smaller files, we use a fake `File`
with a custom string as the filename.

Add a specific subclass for this case, where we also set the
parent `Folder` so the right path is shown. Otherwise,
`File::displayName()` will show the current working
directory as the path for our fake item.
FIXED-IN: 22.12.0

M  +16   -7    src/radialMap/map.cpp

https://invent.kde.org/utilities/filelight/commit/99ce2eaaaa667a293e8547b7f64811350074b223